--- a/node/package.json
+++ b/node/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "panoptes-sdk",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"description": "Panoptes SQL auditing SDK for Node.js with multi-database support, before/after data capture, and database transport",
 	"author": "malydev",
 	"license": "MIT",
-	"homepage": "https://github.com/malydev/panoptes-sdk#readme",
+	"homepage": "https://panoptes-sdk.pages.dev",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/malydev/panoptes-sdk.git"
